# xg-old

./: .gitignore  .gitmodules  .travis.yml  DESIGN.md  Makefile  Makefile.am  Makefile.old  README.base.md  README.html  README.md  configure.ac  main.cpp  requirements.md  source_me.sh  succinct.cpp  succinct.hpp  xg.cpp  xg.hpp  xg.pc.in
src/: Makefile.am  alignment.cpp  handle.cpp  handle.hpp  hash_map.hpp  hash_map_set.hpp  main.cpp  path.cpp  path.hpp  position.cpp  position.hpp  utility.cpp  utility.hpp  xg.cpp  xg.hpp
test/: Makefile
test/data/: b.vg  b_no_path.vg  cyclic_path.vg  l+.vg  l.vg  lg.vg  ll.gfa  ll.vg  mult.xyz.vg  self_loop_paths.vg  with_m.vg  xyz.vg  z.vg
test/data/versions/: v00.xg  v01.xg  vLarge.xg
test/t/: 01_construction.t  01_construction.t~  02_query.t  03_versions.t
